fix feature alignmnent

--- a/wp-content/themes/ceam2018/src/styles/homepage/feature.styl
+++ b/wp-content/themes/ceam2018/src/styles/homepage/feature.styl
@@ -105,7 +105,7 @@
     font-family: Condensed.font
     font-size 6rem
     padding 0
-    text-align right
+    text-align left
     text-shadow 1px 1px 0 black
     text-transform uppercase
     width 50%
